[package]
name = "rs-bf"
description = "A basic Brainf**k interpreter written purely in Rust. Aims are to be independent of libraries, fast, easy to read and extendable"
version = "0.1.0"
authors = ["harrison.rigg@student.ntschools.net"]
license = "MIT"
keywords = ["brainfuck", "interpreter", "compiler"]
readme = "README.md"
repository = "https://github.com/TacoCoder/rs-bf"

[dependencies]
libc = "*"
